--- a/re-collect-Info.plist
+++ b/re-collect-Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleURLTypes</key>
 	<array>
 		<dict>
-			<key>CFBundleURLName</key>
+			<key>CFBundleURrrLName</key>
 			<string>com.yourcompany.re-collect</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
@@ -20,7 +20,7 @@
 	<key>SUFeedURL</key>
 	<string>https://www.re-collect.ai/download/mac/appcast.xml</string>
 	<key>SUPublicEDKey</key>
-	<string>yTIF5jGWOFJkFujCnZVaqWaHnX1/Cp+DmuBL6bc+4Ek=</string>
+	<string></string>
 	<key>com.apple.security.files.user-selected.read-write</key>
 	<string>Needed</string>
 	<key>com.apple.security.temporary-exception.mach-lookup.global-name</key>
